# agentic-ai

./: .env.example  .gitignore  .mise.toml  .pre-commit-config.yaml  README.md  pyproject.toml
src/: __init__.py  client.py  main.py  server.py  strands_mcp.py  ui.py
src/agents/: __init__.py  orchestrator.py
src/apps/backend/: app.py
src/apps/backend/mcp/: __init__.py  client.py  server.py
src/apps/backend/tools/: __init__.py  weather.py
src/apps/frontend/: __init__.py  chat_ui.py
src/mcp/: server.py
src/mcp/resources/: __init__.py  greeting.py  weather.py
src/mcp/tools/: __init__.py
src/tools/: __init__.py
tests/: __init__.py  test_main.py  test_orchestrator.py
